# Soldering_Plate

./: .gitignore  Control_Latch_Design.FCStd  README.md  Soldering_Plate-BackCover.stl  Soldering_Plate-BottomBase.stl  Soldering_Plate-FrontPanel.stl  Soldering_Plate-LCD_Hold_Pin.stl  Soldering_Plate-LegBase.stl  Soldering_Plate-MainCover.stl  Soldering_Plate-Work_top.stl  Soldering_Plate.FCStd
SolderPlate_Control/: SolderPlate_Control.kicad_pcb  SolderPlate_Control.kicad_prl  SolderPlate_Control.kicad_pro  SolderPlate_Control.kicad_sch  SolderPlate_Control.step  SolderPlate_Control.wrl
SolderPlate_Control/production/: SolderPlate_Control-B_Cu.gbr  SolderPlate_Control-B_Mask.gbr  SolderPlate_Control-B_Paste.gbr  SolderPlate_Control-B_SilkS.gbr  SolderPlate_Control-Edge_Cuts.gbr  SolderPlate_Control-F_Cu.gbr  SolderPlate_Control-F_Mask.gbr  SolderPlate_Control-F_Paste.gbr  SolderPlate_Control-F_SilkS.gbr  SolderPlate_Control-PTH.drl  SolderPlate_Control-User_Comments.gbr  bom.csv  designators.csv  netlist.ipc  positions.csv
SolderPlate_FW/: .mxproject  .stm32env  CMakeLists.txt  Makefile  STM32-for-VSCode.config.yaml  STM32F103C8Tx_FLASH.ld  STM32F103C8Tx_FLASH.ld.bck  STM32Make.make  SolderPlate_FW.ioc
SolderPlate_FW/Core/Inc/: cli.h  cli_commands.h  config.h  lcd16x2.h  leds.h  main.h  menu.h  persistent_data.h  pid.h  reset.h  state.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  thermistor.h
SolderPlate_FW/Core/Src/: cli.c  cli_commands.c  lcd16x2.c  leds.c  main.c  menu.c  persistent_data.c  pid.c  state.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  thermistor.c  usb_redirect.c
SolderPlate_FW/STM32CubeIDE/: .cproject  .project
SolderPlate_FW/USB_DEVICE/App/: usbd_cdc_if.c  usbd_desc.c
SolderPlate_FW/cmake/: gcc-arm-none-eabi.cmake
SolderPlate_FW/cmake/stm32cubemx/: CMakeLists.txt
SolderPlate_Power/: SolderPlate_Power.kicad_pcb  SolderPlate_Power.kicad_prl  SolderPlate_Power.kicad_pro  SolderPlate_Power.kicad_sch  SolderPlate_Power.wrl
SolderPlate_Power/production/: SolderPlate_Power-B_Cu.gbr  SolderPlate_Power-B_Mask.gbr  SolderPlate_Power-B_Paste.gbr  SolderPlate_Power-B_SilkS.gbr  SolderPlate_Power-Edge_Cuts.gbr  SolderPlate_Power-F_Cu.gbr  SolderPlate_Power-F_Mask.gbr  SolderPlate_Power-F_Paste.gbr  SolderPlate_Power-F_SilkS.gbr  SolderPlate_Power-PTH.drl  bom.csv  designators.csv  netlist.ipc  positions.csv
